force-app/main/default/objects/copado__Org__c/copado__Org__c.object-meta.xml
<CustomObject>
    <label>Org Credential</label>
    <nameField>
        <label>Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Credentials</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>