force-app/main/default/objects/copado__Org__c/fields/copado__Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Compliance_Status__c</fullName>
    <description>Status of the most recent Compliance Scan of the Org.</description>
    <label>Compliance Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>