force-app/main/default/objects/copado__Org__c/fields/copado__Developer_Hub_Org__c.field-meta.xml
<CustomField>
    <fullName>copado__Developer_Hub_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer Hub Org</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>copado__Org__c.copado__is_Developer_Hub_Org__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>copado__Org__c</referenceTo>
    <relationshipLabel>Org Credentials</relationshipLabel>
    <relationshipName>Org_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>