force-app/main/default/objects/copado__Org__c/fields/copado__is_Developer_Hub_Org__c.field-meta.xml
<CustomField>
    <fullName>copado__is_Developer_Hub_Org__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Developer Hub Org</label>
    <type>Checkbox</type>
</CustomField>