force-app/main/default/objects/copado__Org__c/fields/copado__Org_Type__c.field-meta.xml
<CustomField>
    <fullName>copado__Org_Type__c</fullName>
    <label>Org Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Production/Developer</fullName>
                <default>true</default>
                <label>Production/Developer</label>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>