force-app/main/default/objects/copado__Org__c/fields/copado__Test_Frequency__c.field-meta.xml
<CustomField>
    <fullName>copado__Test_Frequency__c</fullName>
    <description>Continuous Integration feature. Run all Apex Test methods and save the results in the Apex Test Result object to create email alerts or reports. This feature is very powerful along with Git Backups to detect recent failing changes automatically.</description>
    <inlineHelpText>Continuous Integration feature. Run all Apex Test methods and save the results in  the Apex Test Result object to do email alerts or reporting. This feature is quite powerful together with the Git Backups to detect failure-changes automatically.</inlineHelpText>
    <label>Test Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>