force-app/main/default/objects/copado__Org__c/fields/copado__Validated_Date__c.field-meta.xml
<CustomField>
    <fullName>copado__Validated_Date__c</fullName>
    <description>Latest OAuth authentication validation date.</description>
    <label>Validated Date</label>
    <type>DateTime</type>
</CustomField>